--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <span class="cabeçalho__menu-hamburguer container__imagem"></span>
       </label>
       <ul class="lista-menu">
-        <li class="lista-menu__titulo">Categorias</li>
+        <li class="lista-menu__titulo">Tipos</li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
+          <a href="#" class="lista-menu__link">A tal da programação</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
+          <a href="#" class="lista-menu__link">O que você vê (front)</a>
         </li>
         <li class="lista-menu__item">
           <a href="#" class="lista-menu__link">Infraestrutura</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
+          <a href="#" class="lista-menu__link">Negocios</a>
         </li>
         <li class="lista-menu__item">
           <a href="#" class="lista-menu__link">Design & UX</a>
@@ -48,13 +48,13 @@
   </header>
 
   <section class="banner">
-    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    <h2 class="banner__titulo">O que manda hoje, patrão?</h2>
+    <p class="banner__texto">Dá uma olhadinha!</p>
+    <input type="search" class="banner__pesquisa" placeholder="O que deseja?">
   </section>
 
   <section class="carrossel">
-    <h2 class="carrossel__titulo">Novos lançamentos</h2>
+    <h2 class="carrossel__titulo">As novas paradinhas</h2>
     <!-- Slider main container -->
     <div class="swiper">
       <!-- Additional required wrapper -->
@@ -86,10 +86,10 @@
     <div class="card">
       <div class="card__descrição">
         <div class="descrição">
-          <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-          <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+          <h3 class="descrição__titulo">Talvez você curta......</h3>
+          <h2 class="descrição__titulo-livro">nem sei o que é</h2>
           <p class="descrição__texto">
-            Construindo uma aplicação integrada com a plataforma do Google.
+            Construindo junto com o Google.
           </p>
         </div>
         <img src="img/Angular.svg" class="descrição__imagem" />
@@ -110,7 +110,7 @@
   </section>
 
   <section class=”carrossel”>
-    <h2 class="carrossel__titulo">Mais vendidos</h2>
+    <h2 class="carrossel__titulo">Os mais pedidos</h2>
     <div class="swiper">
       <!-- Additional required wrapper -->
       <!-- If we need pagination -->
@@ -140,9 +140,9 @@
         <!-- 1º coluna -->
         <div class="descrição">
           <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-          <h3 class="descrição__titulo">Autora do Mês</h3>
-          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-          <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+          <h3 class="descrição__titulo">THE autora</h3>
+          <h2 class="descrição__titulo-livro">Giulia Magalhaes</h2>
+          <p class="descrição__texto">Sim.
           </p>
         </div>
         <!-- 2º coluna -->
@@ -157,7 +157,7 @@
           <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
         </ul>
         <!-- 2º coluna -->
-        <a href="#" class="botões__ancora">Saiba mais</a>
+        <a href="#" class="botões__ancora">Entenda</a>
       </div>
     </div>
 
@@ -170,25 +170,25 @@
     <ul class="tópicos__lista">
       <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Marketing Digital</a>
+        <a href="#" class="tópicos__link">placehold text</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Agile</a>
+        <a href="#" class="tópicos__link">placehold text</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Startups</a>
+        <a href="#" class="tópicos__link">placehold text</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">HTML & CSS</a>
+        <a href="#" class="tópicos__link">placehold text</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Python</a>
+        <a href="#" class="tópicos__link">placehold text</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">OO</a>
+        <a href="#" class="tópicos__link">placehold text</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Java</a>
+        <a href="#" class="tópicos__link">placehold text</a>
       </li>
     </ul>
   </section>
